--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@types/node": "^18.11.7",
     "@vitejs/plugin-vue": "^3.2.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.6.4",
     "vite": "^3.2.0",
     "vue-tsc": "^1.0.9"
